--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "lib/bresenham"]
 	path = lib/bresenham
 	url = https://github.com/wolf81/bresenham.lua.git
+[submodule "lib/composer"]
+	path = lib/composer
+	url = git@github.com:wolf81/composer.git
