--- a/.gitmodules
+++ b/.gitmodules
@@ -12,4 +12,4 @@
 	url = https://github.com/wolf81/bresenham.lua.git
 [submodule "lib/composer"]
 	path = lib/composer
-	url = git@github.com:wolf81/composer.git
+	url = https://github.com/wolf81/composer.git
