--- a/.gitmodules
+++ b/.gitmodules
@@ -11,3 +11,6 @@
 	path = lib/bresenham
 	url = https://github.com/wolf81/bresenham.lua.git
 
+[submodule "lib/composer"]
+	path = lib/composer
+	url = https://github.com/wolf81/composer.git
